WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236617
Direct touches don't trigger other gesture recognizers if WKMouseGestureRecognizer sees them first
https://bugs.webkit.org/show_bug.cgi?id=236617
Summary
Direct touches don't trigger other gesture recognizers if WKMouseGestureRecog...
Tim Horton
Reported
2022-02-14 15:46:25 PST
Direct touches don't trigger other gesture recognizers if WKMouseGestureRecognizer sees them first
Attachments
Patch
(2.00 KB, patch)
2022-02-14 15:46 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2022-02-14 15:46:35 PST
Created
attachment 451951
[details]
Patch
EWS
Comment 2
2022-02-14 17:35:21 PST
Committed
r289785
(
247250@main
): <
https://commits.webkit.org/247250@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 451951
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-02-14 17:36:17 PST
<
rdar://problem/88938412
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug