Direct touches don't trigger other gesture recognizers if WKMouseGestureRecognizer sees them first https://bugs.webkit.org/show_bug.cgi?id=236617

Reviewed by Wenson Hsieh.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView gestureRecognizer:shouldReceiveTouch:]):
WKMouseGestureRecognizer should only completely steal touches of type
UITouchTypeIndirectPointer. Other touch types (e.g. synthetic direct touches)
still need to trigger other WKContentViewInteraction gesture recognizers
(like long-press and double-tap) despite WKMouseGestureRecognizer
seeing their touches. So, check the touch type before early-returning.



Canonical link: https://commits.webkit.org/247250@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289785 268f45cc-cd09-0410-ab3c-d52691b4dbfc